improved announced address processing